k8s/netcup-test-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csearch-frontend-test
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - test.csearch.org
      secretName: csearch-frontend-test-tls
  rules:
    - host: test.csearch.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csearch-frontend-test
                port:
                  number: 80
